Adjusted padding and margins and max widths to ensure consistency in formatting across screen sizes as well as added spacing elements between bullet points

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 .container {
     margin: 20px auto;
+    padding-bottom: 1em;
     background-color: #e9e9e9;
-    border-radius: 1%;
+    border-radius: 10px / 10px;
     width: 99.9%;
 }
 
@@ -31,14 +32,14 @@ img {
     display: block;
     margin: 0 auto;
     max-width: 1000px;
-    width: 100%;
+    width: 90%;
     aspect-ratio: 16 / 9;
 }
 
 figure {
     margin-inline-start: 15px;
     margin-inline-end: 15px;
-    padding: 1.5em 0px .5em 10px;
+    padding: 1.5em 0 .5em 0;
     background-color: #f7f7f7;
 }
 
@@ -61,10 +62,19 @@ li {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: block;
     margin: .5em auto;
-    width: 30%;
+    width: 80%;
+    max-width: 600px;
     padding: 1.5em;
     background-color: #f7f7f7;
     border-radius: 60px / 60px;
     height: 2.4em;
 }
 
+.list-spacer {
+    margin: 1em auto;
+    padding: 3px;
+    background-color: rgb(110, 110, 110);
+    width: 3px;
+    height: 3px;
+    border-radius: 30px / 30px;
+}
